# MedRAG-Demo

./: .gitignore  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250428_0001_initial_schema.py  20250428_0002_v3_v4_feature_modules.py  20250428_0003_agentic_care_coordination.py  20250429_0004_medical_image_pipeline.py  20250501_0005_bge_biomedclip_embeddings.py  20250501_0006_production_ocr_review.py  20250501_0007_hospital_management.py  20250612_0008_conversation_history.py  20250625_0009_family_member_user_id.py  20250625_0010_sms_outbox.py  20250625_0011_p2p_iot.py  20250625_0012_remaining_features.py  20250626_0013_user_profile_fields.py  20250626_0014_nullable_slot_hospital.py  20250627_0015_consultation_rooms.py  20250627_0016_emergency_dispatch_hospital_location.py  20250627_0017_patient_access_requests.py  20250627_0018_hospital_resources_bookings.py  20250628_0019_appointment_confirmed_at.py  20250628_0020_slot_timezone.py  20250629_0021_preconsult_agent.py  20260428_0001_initial_schema.py  20260428_0002_v3_v4_feature_modules.py  20260428_0003_agentic_care_coordination.py  20260429_0004_medical_image_pipeline.py  20260501_0005_bge_biomedclip_embeddings.py  20260501_0006_production_ocr_review.py  20260501_0007_hospital_management.py  20260612_0008_conversation_history.py  20260625_0011_p2p_iot.py  (+12 more)
apps/api/app/: __init__.py  main.py
apps/api/training/: build_sft_from_sources.py  evaluate_adapter.py  evaluate_clinical_quality.py  generate_quality_predictions.py  ingest_rag_sources.py  model_card_template.md  train_lora.py
(+74 files in other folders)
